test/classes/figueroa/BogusDestructors2.good
BogusDestructors2.chpl:1: error: destructors must be methods
