test/classes/figueroa/BogusDestructors2.chpl
proc deinit (x) {writeln("inside deinit(x)");}
